# flask_conferences

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package.json  pyproject.toml  webpack.config.js
.github/workflows/: ci.yml
assets/js/: main.js
flask_conferences/: app.py  commands.py
flask_conferences/public/: forms.py  views.py
flask_conferences/templates/: footer.html  layout.html  nav.html
flask_conferences/templates/public/: home.html
flask_conferences/user/: models.py
github/workflows/: continuous-integration.yaml
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  test_forms.py  test_functional.py  test_models.py
