[tool.poetry]
name = "flask_conferences"
version = "0.1.0"
description = ""
authors = ["Joel Castillo <joelbcastillo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joelbcastillo/flask_conferences"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "==1.1.2"
Werkzeug = "==1.0.1"
click = ">=5.0"
Flask-SQLAlchemy = "==2.4.1"
SQLAlchemy = "==1.3.17"
psycopg2-binary = "==2.8.5"
Flask-Migrate = "==2.5.3"
email-validator = "==1.1.0"
Flask-WTF = "==0.14.3"
WTForms = "==2.3.1"
gevent = "==20.5.0"
gunicorn = ">=19.1.1"
supervisor = "==4.2.0"
Flask-Static-Digest = "==0.1.3"
Flask-Login = "==0.5.0"
Flask-Bcrypt = "==0.7.1"
Flask-Caching = ">=1.0.0"
Flask-DebugToolbar = "==0.11.0"
environs = "==7.4.0"

[tool.poetry.dev-dependencies]
pytest = "==5.4.2"
WebTest = "==2.0.35"
factory-boy = "==2.12.*"
pdbpp = "==0.10.2"
black = "==19.10b0"
flake8 = "==3.8.1"
flake8-blind-except = "==0.1.1"
flake8-debugger = "==3.2.1"
flake8-docstrings = "==1.5.0"
flake8-isort = "==3.0.0"
isort = "==4.3.21"
pep8-naming = "==0.10.0"
pytest-cov = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joelbcastillo/flask_conferences/issues"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
